[gd_scene load_steps=77 format=1]

[ext_resource path="res://entities/player/player.gd" type="Script" id=1]
[ext_resource path="res://entities/player/player.png" type="Texture" id=2]
[ext_resource path="res://entities/player/wheel.tscn" type="PackedScene" id=3]
[ext_resource path="res://art/particles/explosion1/tile002.tex" type="Texture" id=4]
[ext_resource path="res://art/particles/explosion1/tile003.tex" type="Texture" id=5]
[ext_resource path="res://art/particles/explosion1/tile004.tex" type="Texture" id=6]
[ext_resource path="res://art/particles/explosion1/tile005.tex" type="Texture" id=7]
[ext_resource path="res://art/particles/explosion1/tile006.tex" type="Texture" id=8]
[ext_resource path="res://art/particles/explosion1/tile007.tex" type="Texture" id=9]
[ext_resource path="res://art/particles/explosion1/tile008.tex" type="Texture" id=10]
[ext_resource path="res://art/particles/explosion1/tile009.tex" type="Texture" id=11]
[ext_resource path="res://art/particles/explosion1/tile010.tex" type="Texture" id=12]
[ext_resource path="res://art/particles/explosion1/tile011.tex" type="Texture" id=13]
[ext_resource path="res://art/particles/explosion1/tile012.tex" type="Texture" id=14]
[ext_resource path="res://art/particles/explosion1/tile013.tex" type="Texture" id=15]
[ext_resource path="res://art/particles/explosion1/tile014.tex" type="Texture" id=16]
[ext_resource path="res://art/particles/explosion1/tile015.tex" type="Texture" id=17]
[ext_resource path="res://art/particles/explosion1/tile016.tex" type="Texture" id=18]
[ext_resource path="res://art/particles/explosion1/tile017.tex" type="Texture" id=19]
[ext_resource path="res://art/particles/explosion1/tile018.tex" type="Texture" id=20]
[ext_resource path="res://art/particles/explosion1/tile019.tex" type="Texture" id=21]
[ext_resource path="res://art/particles/explosion1/tile020.tex" type="Texture" id=22]
[ext_resource path="res://art/particles/explosion1/tile021.tex" type="Texture" id=23]
[ext_resource path="res://art/particles/explosion1/tile022.tex" type="Texture" id=24]
[ext_resource path="res://art/particles/explosion1/tile023.tex" type="Texture" id=25]
[ext_resource path="res://art/particles/explosion1/tile024.tex" type="Texture" id=26]
[ext_resource path="res://art/particles/explosion1/tile025.tex" type="Texture" id=27]
[ext_resource path="res://art/particles/explosion1/tile026.tex" type="Texture" id=28]
[ext_resource path="res://art/particles/explosion1/tile027.tex" type="Texture" id=29]
[ext_resource path="res://art/particles/explosion1/tile028.tex" type="Texture" id=30]
[ext_resource path="res://art/particles/explosion1/tile029.tex" type="Texture" id=31]
[ext_resource path="res://art/particles/explosion1/tile030.tex" type="Texture" id=32]
[ext_resource path="res://art/particles/explosion1/tile031.tex" type="Texture" id=33]
[ext_resource path="res://art/particles/explosion1/tile032.tex" type="Texture" id=34]
[ext_resource path="res://art/particles/explosion1/tile033.tex" type="Texture" id=35]
[ext_resource path="res://art/particles/explosion1/tile034.tex" type="Texture" id=36]
[ext_resource path="res://art/particles/explosion1/tile035.tex" type="Texture" id=37]
[ext_resource path="res://art/particles/explosion1/tile036.tex" type="Texture" id=38]
[ext_resource path="res://art/particles/explosion1/tile037.tex" type="Texture" id=39]
[ext_resource path="res://art/particles/explosion1/tile038.tex" type="Texture" id=40]
[ext_resource path="res://art/particles/explosion1/tile039.tex" type="Texture" id=41]
[ext_resource path="res://art/particles/explosion1/tile040.tex" type="Texture" id=42]
[ext_resource path="res://art/particles/explosion1/tile041.tex" type="Texture" id=43]
[ext_resource path="res://art/particles/explosion1/tile042.tex" type="Texture" id=44]
[ext_resource path="res://art/particles/explosion1/tile043.tex" type="Texture" id=45]
[ext_resource path="res://art/particles/explosion1/tile044.tex" type="Texture" id=46]
[ext_resource path="res://art/particles/explosion1/tile045.tex" type="Texture" id=47]
[ext_resource path="res://art/particles/explosion1/tile046.tex" type="Texture" id=48]
[ext_resource path="res://art/particles/explosion1/tile047.tex" type="Texture" id=49]
[ext_resource path="res://art/particles/explosion1/tile048.tex" type="Texture" id=50]
[ext_resource path="res://art/particles/explosion1/tile049.tex" type="Texture" id=51]
[ext_resource path="res://art/particles/explosion1/tile050.tex" type="Texture" id=52]
[ext_resource path="res://art/particles/explosion1/tile051.tex" type="Texture" id=53]
[ext_resource path="res://art/particles/explosion1/tile052.tex" type="Texture" id=54]
[ext_resource path="res://art/particles/explosion1/tile053.tex" type="Texture" id=55]
[ext_resource path="res://art/particles/explosion1/tile054.tex" type="Texture" id=56]
[ext_resource path="res://art/particles/explosion1/tile055.tex" type="Texture" id=57]
[ext_resource path="res://art/particles/explosion1/tile056.tex" type="Texture" id=58]
[ext_resource path="res://art/particles/explosion1/tile057.tex" type="Texture" id=59]
[ext_resource path="res://art/particles/explosion1/tile058.tex" type="Texture" id=60]
[ext_resource path="res://art/particles/explosion1/tile059.tex" type="Texture" id=61]
[ext_resource path="res://art/particles/explosion1/tile060.tex" type="Texture" id=62]
[ext_resource path="res://art/particles/explosion1/tile061.tex" type="Texture" id=63]
[ext_resource path="res://art/particles/explosion1/tile062.tex" type="Texture" id=64]
[ext_resource path="res://art/particles/explosion1/tile063.tex" type="Texture" id=65]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( -25.0677, -28.2444, -25.3312, -34.5689, -17.9526, -34.5689, -17.9526, -27.9809 )

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = Vector2Array( 40.5488, -5.05463, 56.0965, -5.05463, 56.0965, 3.90506, 47.4004, 3.90506 )

[sub_resource type="ConvexPolygonShape2D" id=3]

custom_solver_bias = 0.0
points = Vector2Array( -27.1758, -27.1903, -25.0677, -28.2444, -17.9526, -27.9809, -15.0539, -27.7174, -15.3174, -18.2306, -26.6488, -18.2306 )

[sub_resource type="ConvexPolygonShape2D" id=4]

custom_solver_bias = 0.0
points = Vector2Array( -32.4462, -9.79799, -26.6488, -18.2306, -15.3174, -18.2306, -12.1552, -15.859 )

[sub_resource type="ConvexPolygonShape2D" id=5]

custom_solver_bias = 0.0
points = Vector2Array( 40.5488, 18.1351, -50.3656, 18.1351, -55.8995, 10.2295, -53.5278, -0.0477448, -48.7845, -5.05463, -44.5682, -6.37223 )

[sub_resource type="ConvexPolygonShape2D" id=6]

custom_solver_bias = 0.0
points = Vector2Array( 40.5488, 18.1351, -44.5682, -6.37223, -36.6626, -9.27095, -32.4462, -9.79799 )

[sub_resource type="ConvexPolygonShape2D" id=7]

custom_solver_bias = 0.0
points = Vector2Array( 40.5488, 18.1351, -32.4462, -9.79799, -12.1552, -15.859 )

[sub_resource type="ConvexPolygonShape2D" id=8]

custom_solver_bias = 0.0
points = Vector2Array( 40.5488, 18.1351, -12.1552, -15.859, -1.8779, -19.8118, 11.8251, -20.0753, 19.2037, -17.9671 )

[sub_resource type="ConvexPolygonShape2D" id=9]

custom_solver_bias = 0.0
points = Vector2Array( 40.5488, 18.1351, 19.2037, -17.9671, 26.5823, -16.1225, 32.6432, -12.9602, 36.596, -8.21687 )

[sub_resource type="ConvexPolygonShape2D" id=10]

custom_solver_bias = 0.0
points = Vector2Array( 40.5488, 18.1351, 36.596, -8.21687, 40.5488, -5.05463, 47.4004, 3.90506, 47.4004, 10.4931 )

[sub_resource type="SpriteFrames" id=11]

animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ) ],
"loop": false,
"name": "Death",
"speed": 50.0
} ]

[node name="Player" type="Area2D"]

transform/pos = Vector2( 64, 32 )
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 3 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 4 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 5 )
shapes/4/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/4/trigger = false
shapes/5/shape = SubResource( 6 )
shapes/5/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/5/trigger = false
shapes/6/shape = SubResource( 7 )
shapes/6/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/6/trigger = false
shapes/7/shape = SubResource( 8 )
shapes/7/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/7/trigger = false
shapes/8/shape = SubResource( 9 )
shapes/8/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/8/trigger = false
shapes/9/shape = SubResource( 10 )
shapes/9/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/9/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/mask = 6
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 0, -4 )
texture = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = 0
limit/top = -10000000
limit/right = 10000000
limit/bottom = 720
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.0
drag_margin/top = 0.0
drag_margin/right = 0.0
drag_margin/bottom = 0.0

[node name="WheelFront" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 26.8744, 21.6423 )

[node name="WheelCenter" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( -13.1259, 21.6504 )

[node name="WheelBack" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( -36.9971, 21.6422 )

[node name="CollisionCheck" type="CollisionPolygon2D" parent="."]

build_mode = 0
polygon = Vector2Array( -53.5278, -0.0477448, -48.7845, -5.05463, -44.5682, -6.37223, -36.6626, -9.27095, -32.4462, -9.79799, -26.6488, -18.2306, -27.1758, -27.1903, -25.0677, -28.2444, -25.3312, -34.5689, -17.9526, -34.5689, -17.9526, -27.9809, -15.0539, -27.7174, -15.3174, -18.2306, -12.1552, -15.859, -1.8779, -19.8118, 11.8251, -20.0753, 19.2037, -17.9671, 26.5823, -16.1225, 32.6432, -12.9602, 36.596, -8.21687, 40.5488, -5.05463, 56.0965, -5.05463, 56.0965, 3.90506, 47.4004, 3.90506, 47.4004, 10.4931, 40.5488, 18.1351, -50.3656, 18.1351, -55.8995, 10.2295 )
shape_range = Vector2( 0, 9 )
trigger = false

[node name="DeathAnimation" type="AnimatedSprite" parent="."]

transform/scale = Vector2( 2, 2 )
frames = SubResource( 11 )
animation = "default"

[connection signal="body_enter" from="." to="." method="_on_Player_body_enter"]

[connection signal="finished" from="DeathAnimation" to="." method="_on_DeathAnimation_finished"]


